# CallWhisper-8k

./: .gitignore  AGENTS.md  COLAB_BENCHMARK_PLAN.md  EDGE_FINE_TUNING_PLAN.md  FUTURE_WORK.md  HANDOFF.md  README.md  ROADMAP.md  TRACKING.md  prior_art.md  pyproject.toml  requirements.txt
configs/: full.yaml
datasets/: README.md
datasets/manifests/: example.csv  gramvaani_dev_10.csv  gramvaani_dev_50.csv  gramvaani_dev_50_8khz.csv  (+5 more)
notebooks/: 01_openai_whisper_gpu_benchmark.ipynb  02_hindi_tuned_hf_models.ipynb  03_decoding_adaptation_sweeps.ipynb  04_fleurs_clean_control.ipynb  05_whisper_small_lora_edge_smoke.ipynb  06_lora_reload_eval_colab_report.ipynb  README.md
results/: adaptation_v1.json  adaptation_v1.md  baseline_base_v0.json  baseline_small_50_v0.json  baseline_small_v0.json  baseline_v0.json  baseline_v0.md  baseline_v1.md  clean_control_v1.json  clean_control_v1.md  colab_fleurs_clean_control_summary.md  colab_hf_artpark_iisc_whisper_medium_vaani_hindi_fleurs_hi_clean_50_seed0.json  colab_whisper_large_v3_fleurs_hi_clean_50_seed0.json  colab_whisper_medium_fleurs_hi_clean_50_seed0.json  error_analysis_v1.md  language_auto_small_10_v0.json  language_manifest_small_10_v0.json  lora_pilot_v1.md  lora_reload_eval_colab_v1.md  manual_audio_review_v1.md  model_comparison_v1.json  model_comparison_v1.md  preprocessing_bandpass_small_50_v0.json  preprocessing_normalize_small_50_v0.json  preprocessing_roundtrip_8k_small_50_v0.json  preprocessing_v1.md  preprocessing_whisper_wav_small_50_v0.json  sample_rate_split_v1.json  sample_rate_split_v1.md
(+64 files in other folders)
